# neural-notes

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  kind.yaml
.github/workflows/: cd_axum.yml  cd_fastapi.yml  cd_redis.yml  ci.yml  ci_axum.yml  ci_react.yml
axum/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  fly.toml
axum/.sqlx/: query-695e4adddacae02b6f9ef3c16cf345d4231c1b4ff316fac4eea69d50999320a3.json  query-952524847d6699c675a061eabbab98665081a73999e543c28832c99c030af54b.json
axum/migrations/: 20250624072042_default.down.sql  20250624072042_default.sql  20250703075518_alter_timestamp.sql  20250709025526_add_pgvector.down.sql  20250709025526_add_pgvector.up.sql  20250723072527_change_embedding_dimension.down.sql  20250723072527_change_embedding_dimension.up.sql
axum/perf_test/: put_post.lua
axum/sql/: get_related_posts.sql  search_posts.sql
axum/src/: auth.rs  db.rs  main.rs  models.rs  posts.rs  routes.rs
axum/src/posts/: cache.rs  graph.rs  handlers.rs  mod.rs  models.rs  utils.rs
fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  fly.toml  main.py  requirements.txt
fastapi/scripts/: re_embed_posts.py
k8s/: axum.yaml  fastapi.yaml  postgres.yaml  react.yaml  redis.yaml
migrations/: 20250624072042_default.sql
perf_test/: create_post.py  get_post.lua
react/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json
react/src/: App.css  App.jsx  api.js  i18n.js  main.jsx  tiptap.css
react/src/components/: EditorPanel.jsx  (+8 more)
redis/: Dockerfile  fly.toml
src/: auth.rs  cache.rs  db.rs  main.rs  models.rs  posts.rs  routes.rs
(+8 files in other folders)
