[package]
name = "test_web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
# DB 관련
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }

# react 관련
tower-http = { version = "0.5", features = ["cors"] }

# middleware
tower = "0.4"
redis = { version = "0.25", features = ["tokio-comp"] }
http-body-util = "0.1"
bytes = "1"