[package]
name = "neural_notes_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
# DB 관련
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }

# react 관련
tower-http = { version = "0.5", features = ["cors"] }

# middleware
tower = "0.4"
redis = { version = "0.32.2", features = ["tokio-comp", "aio"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3.31"
jwt-authorizer = "0.15.0"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
bcrypt = "0.17.0"

# pretty print
colored = "2"

# cache
axum-redis-cache = { git = "https://github.com/lyh4215/axum-redis-cache.git", branch = "main"}
#axum-redis-cache = { path = "../axum-redis-cache"}